add hover animation

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Btn-hover-animation",
+  "name": "btn-hover-animation",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
